k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-web
  namespace: ecom
  labels:
    app: ecom-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecom-web
  template:
    metadata:
      labels:
        app: ecom-web
      annotations: {}
    spec:
      containers:
      - name: app
        image: <ECR_URI>/ecom:${IMAGE_TAG}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
      terminationGracePeriodSeconds: 30
