k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-web-svc
  namespace: ecom
spec:
  type: ClusterIP
  selector:
    app: ecom-web
  ports:
    - port: 80
      targetPort: 8080
